--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     "autoload": {
         "psr-4": {
             "Classes\\": "src/Classes/",
-            "Repository\\": "src/Repository/",
-            "Repository2\\": "src/Repository1/"
+            "Repository\\": "src/Repository/"
         }
     }
 }
